@@ -1,3 +1,7 @@
+09/08/09 Julien Dutheil
+* Added PhyloStatistics class for computing several quantities on a tree
+  in an efficient manner.
+
 08/08/09 Bastien Boussau
 * Added support for reading trees with id in TreeTemplateTools.
 
